# testing_di

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt  debug.sh  gen.bat  gen.sh  run.bat  run.sh
include/: processor.hpp
include/input_policies/: keyboard.hpp
policies/keyboard_input/: input_policy.hpp  keyboard.cpp  keyboard.hpp  keyboard_input.cpp
policies/keyboard_output/: keyboard_output.cpp  keyboard_output.hpp  output_policy.hpp
src/: main.cpp  processor.cpp
test/: test_processor.cpp  test_processor_01.cpp
test/policies/fill_buffer_output/: fill_buffer_output.cpp  fill_buffer_output.hpp  output_policy.hpp
test/policies/fixed_string_input/: fixed_string.cpp  fixed_string_input.cpp  fixed_string_input.hpp  input_policy.hpp  keyboard.cpp
test/policies/fixed_string_input/input_policies/: keyboard.hpp
